ccan: update to get json_escape_unescape_len()
See: https://github.com/rustyrussell/ccan/pull/123

--- a/ccan/tools/configurator/configurator.1
+++ b/ccan/tools/configurator/configurator.1
@@ -208,7 +208,7 @@ It will exit with non\-zero status if it has a problem\&. \fB1\fR means bad comm
 Rusty Russell wrote \fBconfigurator\fR\&.
 .SH "RESOURCES"
 .sp
-Main web site: http://ccodearchive\&.net/
+Main web site: https://github\&.com/rustyrussell/ccan
 .sp
 Wiki: https://github\&.com/rustyrussell/ccan/wiki/
 .SH "COPYING"
